--- a/views/pizza.jade
+++ b/views/pizza.jade
@@ -5,6 +5,7 @@ html(lang="en")
   body
     h1= title
     h1= pizza.name
-    ul 
-      each val in pizza.toppings
-      li= val
+    
+    ul
+      each topping in pizza.toppings
+        li= topping
